--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,8 @@
     <title>Todo List</title>
   </head>
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
