--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,19 @@
 <h2>Tasks:</h2>
-<ul>
-<% @tasks.each() do |task| %>
-  <li><%= task.description() %></li>
+<% if @tasks == [] %>
+  <p>You have nothing to do!</p>
+<% else %>
+  <ul>
+    <% @tasks.each() do |task| %>
+      <li><%= task.description() %></li>
+    <% end %>
+  </ul>
 <% end %>
-</ul>
 <h2>Create a new task:</h2>
 <form action = "/confirmation" method="POST">
   <div class="form-group">
-    <label class="form-label" for="description">Enter key:</label>
+    <label class="form-label" for="description">Enter description of new task:</label>
     <input id="description" name="description" class="form-control" type="text" autofocus>
   </div>
-  <button type="submit" class="btn btn-default">Add</button>
+  <button type="submit" class="button-go">Add</button>
 </form>
+<a href="/reset" type="button" class="button-reset">Clear list</a>
